[workspace]
members = ["core", "json"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sylphx <https://github.com/SylphxAI>"]
license = "MIT"
repository = "https://github.com/SylphxAI/molt"

[workspace.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
