[package]
name = "molt-json-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM-accelerated JSON transformer for molt"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
molt-core = { path = "../core" }
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-simd", "--enable-bulk-memory"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+simd128"]
